#90 wrap all thread pools into services which can be shut down by the dpws framework